--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,7 @@
     <string name="send_button">Send</string>
 
     <string name="latest_news">اخبار مترو</string>
+    <string name="goodcitizen">شهروندان ممتاز</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
