--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,8 @@
 
     <string name="latest_news">اخبار مترو</string>
     <string name="goodcitizen">شهروندان ممتاز</string>
+    <string name="onepagebook">کتابچه</string>
+    <string name="introbook">معرفی کتاب</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
